--- a/CIS 4004 Assignments/transition-selectors.css
+++ b/CIS 4004 Assignments/transition-selectors.css
@@ -19,9 +19,58 @@ body nav{
     border: 1px solid black;
     background-color: black;
 }
+#menuItems {
+    display: flex;         /* use Flexbox */
+    flex-direction: column; /* stack items vertically */
+    align-items: flex-start; /* optional: left-align them */
+
+}
+
+#menuItems button{
+    background-color: blue;
+    width: 200px;
+    
+    color: white;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#jumpMenu {
+    list-style: none;          /* remove bullets */
+    padding: 0;
+    margin: 0 auto;            /* centers the ul horizontally */
+    display: flex;
+    flex-direction: column;    /* stack links vertically */
+    align-items: center;       /* center each <li> horizontally */
+
+    background-color: gold;
+}
 
 h1{
     text-align: center;
+}
+
+/* Lays articles out into rows and allows for wrapping upon window resizing */
+#container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    margin-left: 220px; /*  more than the jumpMenu width */
+}
+
+/* Aligns each article to the center with a width of 300px */
+article{
+    text-align: center;
+    width: 300px;
+    
+    
+    
+}
+
+article  p::first-letter{
+    font-size: xx-large;
+
 }
 
 /* Fixed the thank you message to the botton right corner */
